--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,9 @@
 }
 
 /*------------ CONTAINER GERAL ----------------*/
+body{
+    margin: 0;
+}
 
 .container{
     display: -webkit-box;
@@ -205,7 +208,7 @@ p{
 
 @media screen and (min-width:900px){
     .container{
-        max-width: 1700px;
+        max-width: 1500px;
         margin: auto;
     }
 
@@ -335,12 +338,12 @@ p{
 
     .slide{
         max-width: 1400px;
-        height: 82vh;  
+        height: 75vh;  
         margin-top: -2px;
     }
 
     .slide img{
-        height: 82vh;
+        height: 75vh;
     }
 }
 
@@ -411,9 +414,9 @@ p{
 
 /*---------------- RESPONSIVIDADE SAGAS E BOTAO TOPO -------------------*/
 
-@media screen and (min-width: 580px){
+@media screen and (min-width:700px){
     .Sagas img{
-        height: 300px;
+        height: 400px;
     }
 
     .btn-topo{
@@ -526,7 +529,12 @@ iframe{
 .contato{
     display: -webkit-box;
     display: -ms-flexbox;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+            justify-content: center;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
@@ -576,8 +584,13 @@ iframe{
 #btn{
     text-decoration: none;
     cursor: pointer;  
+    background-color: #ececec;
 }
 
+#btn:active{
+    font-size: 16px;
+    color: #a82a2a;
+}
 /*----------- RESPONSIVIDADE CONTATOS ----------------*/
 
 @media screen and (min-width:700px){
