--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
 }
 
 /*------------ CONTAINER GERAL ----------------*/
+
 body{
     margin: 0;
 }
@@ -135,7 +136,7 @@ p{
         -ms-flex-direction: column;
             flex-direction: column;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
     text-transform: uppercase;
     font-size: 12px;
     text-align: center;
@@ -146,8 +147,6 @@ p{
     background-color: #a82a2a;
     color: #fff;
     border-radius: 3%;
-    
-
 }
 
 .Barra_menu ul li:first-child a:hover{
@@ -191,6 +190,10 @@ p{
         margin-left: 5%;
     }
 
+    .Barra_menu ul li:first-child a{
+        margin-left: 110px;
+    }
+
     .Barra_menu ul{
         margin-top: 16px;
         font-size: 11px;
@@ -231,14 +234,11 @@ p{
     
     .Barra_menu ul{
         width: 100%;
-        -webkit-box-pack: space-evenly;
-            -ms-flex-pack: space-evenly;
-                justify-content: space-evenly;
         font-size: 13px;
         margin-top: 28px;
         margin-left: 20px;
     }
-
+    
     h1,h2{
         font-size: 25px;
     }
@@ -349,11 +349,11 @@ p{
 
 @media screen and (min-width:1000px){
     .slide{
-        height: 84vh; 
+        height: 600px; 
     }
 
     .slide img{
-        height: 84vh;
+        height: 600px;
     }
 }
 /*------------------------ SAGAS --------------------*/
@@ -371,6 +371,7 @@ p{
 
 .Sagas img{
     width: 100%;
+    height: 55%;
 }
 
 /*BOTÃO TOPO*/
@@ -422,16 +423,20 @@ p{
 }
 
 /*---------------- RESPONSIVIDADE SAGAS E BOTAO TOPO -------------------*/
+@media screen and (min-width:500px){
+    .Sagas img{
+        height: 290px;
+    }
+}
 
 @media screen and (min-width:700px){
-    .Sagas img{
-        height: 400px;
-    }
-
     .btn-topo{
         width: 25px;
         height: 25px;
         display: inline;
+        background: linear-gradient(rgb(252, 230, 32) , #a82a2a);/*ADAPTAÇÃO PARA O BROWSER MICROSOFT EDGE*/
+        background: -webkit-linear-gradient(rgba(252, 230, 32, 0.767) , #a82a2ac0);
+        background: -o-linear-gradient(rgba(252, 230, 32, 0.767) , #a82a2ac0);
         background: linear-gradient(rgba(252, 230, 32, 0.767) , #a82a2ac0);
         text-align: center;
         padding: 5px;
@@ -625,7 +630,7 @@ iframe{
 @media screen and (min-width:900px){
 
     .contato{
-        height: 80vh;
+        height: 500px;
     }
 
     #contato input{
